chore: Update button styles to use tertiary color

--- a/src/components/FestivalVolunteer.astro
+++ b/src/components/FestivalVolunteer.astro
@@ -1,5 +1,5 @@
 ---
-import Title from "./Title.astro";
+import Title from './Title.astro';
 ---
 
 <div class="content-container">
@@ -10,7 +10,7 @@ import Title from "./Title.astro";
   </p>
   <a
     href="https://pointapp.org/orgs/3346"
-    class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-navy w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
+    class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-tertiary w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
   >
     » SIGN UP HERE
   </a>
