--- a/src/components/about/CommitteeRoles.astro
+++ b/src/components/about/CommitteeRoles.astro
@@ -80,7 +80,7 @@ const { groups } = Astro.props;
 
 <style>
   a.button {
-    @apply block bg-navy rounded text-xl text-gray-200 mb-5 last:mb-0 font-base font-bold py-2 px-4 cursor-pointer;
+    @apply block bg-tertiary rounded text-xl text-gray-200 mb-5 last:mb-0 font-base font-bold py-2 px-4 cursor-pointer;
   }
 
   a.button:hover {
