--- a/src/components/about/HonkFamily.astro
+++ b/src/components/about/HonkFamily.astro
@@ -17,12 +17,12 @@ const { family } = Astro.props;
               class="font-bold block w-full flex flex-col text-center items-center"
               href={honk.url}
             >
-              <div class="block border-navy border-4 rounded-xl w-80 relative top-4 text-2xl transition ease-in-out hover:bg-navy hover:bg-opacity-100 hover:scale-105">
-                <span class="inline-block relative bottom-4 bg-cobalt px-2 rounded-xl bg-opacity-90 text-accent-lt">
+              <div class="block border-tertiary border-4 rounded-xl w-80 relative top-4 text-2xl transition ease-in-out hover:bg-tertiary hover:bg-opacity-100 hover:scale-105">
+                <span class="inline-block relative bottom-4 bg-tertiary-dk px-2 rounded-xl bg-opacity-90 text-accent-lt">
                   {honk.name}
                 </span>
               </div>
-              <span class="block bg-cobalt px-2 z-10 text-gray-200 rounded-xl bg-opacity-90">
+              <span class="block bg-tertiary-dk px-2 z-10 text-gray-200 rounded-xl bg-opacity-90">
                 {honk.location}
               </span>
             </a>
