--- a/src/pages/supporters/index.astro
+++ b/src/pages/supporters/index.astro
@@ -54,7 +54,7 @@ import supporters from '@data/supporters.toml';
           <br />
           <a
             href="https://connect.clickandpledge.com/w/Form/a6086a7f-ef18-4eb8-a2bc-ffa205759fcc"
-            class="block transition ease-in-out bg-navy hover:scale-105 py-1 px-4 mt-2 text-center rounded-full w-auto"
+            class="block transition ease-in-out bg-tertiary hover:scale-105 py-1 px-4 mt-2 text-center rounded-full w-auto"
           >
             <span class="block text-lg content text-white">Click & Pledge</span>
           </a>
