--- a/src/pages/volunteer/index.astro
+++ b/src/pages/volunteer/index.astro
@@ -1,11 +1,11 @@
 ---
-import BaseLayout from "@layouts/BaseLayout.astro";
-import Title from "@components/Title.astro";
-import BackToTop from "@components/BackToTop.astro";
-import OpenPositions from "@components/volunteer/OpenPositions.astro";
-import FestivalVolunteer from "@components/FestivalVolunteer.astro";
+import BaseLayout from '@layouts/BaseLayout.astro';
+import Title from '@components/Title.astro';
+import BackToTop from '@components/BackToTop.astro';
+import OpenPositions from '@components/volunteer/OpenPositions.astro';
+import FestivalVolunteer from '@components/FestivalVolunteer.astro';
 
-import positions from "@data/positions.toml";
+import positions from '@data/positions.toml';
 ---
 
 <BaseLayout title="Volunteer">
@@ -19,7 +19,7 @@ import positions from "@data/positions.toml";
         </p>
         <a
           href="/volunteer/housing-form"
-          class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-navy w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
+          class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-tertiary w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
         >
           » SIGN UP HERE
         </a>
