--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,15 +4,9 @@
 @tailwind utilities;
 
 :root {
-  --colors-aqua: hsl(185, 100%, 40%);
-  --colors-accent: hsl(327, 100%, 69%);
-  --colors-accent-lt: hsl(327, 100%, 80%);
-  --colors-navy: hsl(210, 100%, 40%);
-  --colors-cobalt: hsl(222, 70%, 40%);
-
   --colors-rock: hsl(352, 75%, 60%);
-
   --colors-sky: hsl(165, 50%, 65%);
+  --colors-sky-dk: hsl(165, 50%, 45%);
   --colors-pearl: hsl(45, 90%, 92%);
   --colors-violet: hsl(330, 57%, 43%);
   --colors-violet-lt: hsl(330, 57%, 63%);
@@ -26,6 +20,9 @@
 
   --colors-accent: var(--colors-violet);
   --colors-accent-lt: var(--colors-violet-lt);
+
+  --colors-tertiary: var(--colors-sky);
+  --colors-tertiary-dk: var(--colors-sky-dk);
 
 
   --colors-site-background: var(--colors-rock);
@@ -47,6 +44,7 @@
   --colors-nav-active-background: var(--colors-black);
   --colors-nav-active-ring: var(--colors-pearl);
 
+  --colors-footer-background: var(--colors-violet);
 }
 
 .content-container {
@@ -77,9 +75,9 @@ p a {
   @apply flex flex-wrap font-semibold text-2xl sm:text-3xl font-title border-title_border border-dotted mb-4 pb-1;
 }
 /* .title {
-  text-shadow: 3px 3px 0 var(--colors-cobalt),
-    -1px -1px 3px var(--colors-cobalt), 1px -1px 3px var(--colors-cobalt),
-    -1px 1px 3px var(--colors-cobalt), 1px 1px 3px var(--colors-cobalt);
+  text-shadow: 3px 3px 0 var(--colors-tertiary-dk),
+    -1px -1px 3px var(--colors-tertiary-dk), 1px -1px 3px var(--colors-tertiary-dk),
+    -1px 1px 3px var(--colors-tertiary-dk), 1px 1px 3px var(--colors-tertiary-dk);
 } */
 
 i.paypal {
