--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,9 +12,9 @@ interface Props {
 const { supporters, social }: Props = Astro.props;
 ---
 
-<div class="bg-cobalt">
+<div class="bg-black">
   <!-- SPONSORS -->
-  <div class="border-b-[1rem] border-navy border-opacity-80">
+  <div class="border-b-[1rem] border-accent border-opacity-80">
     <div
       class="max-w-screen-xl w-full mx-auto pt-3 px-3 sm:py-4 sm:px-6 flex flex-wrap sm:flex-nowrap"
     >
@@ -53,12 +53,12 @@ const { supporters, social }: Props = Astro.props;
 </div>
 
 <!-- BOTTOM -->
-<div class="bg-navy">
+<div class="bg-black">
   <div
     class="max-w-screen-xl w-full mx-auto p-1 sm:p-0 flex flex-wrap sm:flex-nowrap items-center"
   >
     <a
-      class="w-full text-center text-cobalt text-lg font-bold font-base block sm:w-1/3 m-1 sm:m-4"
+      class="w-full text-center text-accent-lt text-lg font-bold font-base block sm:w-1/3 m-1 sm:m-4"
       href="/">© {new Date().getFullYear()} HONK! Fest West</a
     >
     <ul
@@ -66,7 +66,7 @@ const { supporters, social }: Props = Astro.props;
     >
       {
         Object.keys(social.links).map((key) => (
-          <li class="text-cobalt">
+          <li class="text-accent-lt">
             <SocialLink key={key} link={social.links[key]} size="1.25rem" />
           </li>
         ))
@@ -74,7 +74,7 @@ const { supporters, social }: Props = Astro.props;
     </ul>
     <GoldenDino client:visible />
     <a
-      class="text-shadow w-full text-center font-base link text-content_btt font-bold text-lg block sm:w-1/3 m-1 sm:m-4 underline hover:scale-105"
+      class="text-shadow w-full text-center font-base link text-accent-lt font-bold text-lg block sm:w-1/3 m-1 sm:m-4 underline hover:scale-105"
       href="#"
     >
       Back to top
