--- a/src/components/volunteer/OpenPositions.astro
+++ b/src/components/volunteer/OpenPositions.astro
@@ -2,18 +2,18 @@
 import BackToTop from '@components/BackToTop.astro';
 import Title from '@components/Title.astro';
 
-const {positions} = Astro.props;
+const { positions } = Astro.props;
 ---
 
 {
-  positions.open.map((position: {title:number, description:string}) => (
+  positions.open.map((position: { title: number; description: string }) => (
     <div class="content-container">
       <BackToTop />
       <Title title={position.title} />
       <p>{position.description}</p>
       <a
         href={`/volunteer/committee-form?position=${position.title}`}
-        class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-navy w-fit text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
+        class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-tertiary w-fit text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
       >
         » APPLY
       </a>
