--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -105,7 +105,7 @@ import contact from '@data/contact.toml';
 
 <style>
   a.button {
-    @apply block bg-navy rounded text-xl text-gray-200 mb-5 last:mb-0 font-base font-bold py-2 px-4 cursor-pointer;
+    @apply block bg-tertiary rounded text-xl text-gray-200 mb-5 last:mb-0 font-base font-bold py-2 px-4 cursor-pointer;
   }
 
   a.button:hover {
