--- a/src/components/NewsletterForm.astro
+++ b/src/components/NewsletterForm.astro
@@ -33,7 +33,7 @@ import Title from '@components/Title.astro';
           type="email"
           value=""
           name="EMAIL"
-          class="bg-gray-100 bg-opacity-80 block w-full font-base text-lg px-2 py-1"
+          class="bg-gray-200 bg-opacity-80 block w-full font-base text-lg px-2 py-1"
           id="mce-EMAIL"
         />
       </div>
@@ -56,7 +56,7 @@ import Title from '@components/Title.astro';
         value="Subscribe"
         name="subscribe"
         id="mc-embedded-subscribe"
-        class="text-shadow z-20 text-gray-200 bg-tertiary-dk bg-opacity-80 hover:bg-opacity-90 rounded font-base text-base sm:text-lg px-2 py-1 cursor-pointer hover:scale-105 ease-in"
+        class="mt-4 text-shadow z-20 text-gray-200 bg-tertiary-dk bg-opacity-80 hover:bg-opacity-90 rounded font-base text-base sm:text-lg px-2 py-1 cursor-pointer hover:scale-105 ease-in"
       />
     </div>
   </form>
