--- a/src/components/home/FestivalInfoBlock.astro
+++ b/src/components/home/FestivalInfoBlock.astro
@@ -14,17 +14,17 @@ import Title from '@components/Title.astro';
       </span>
       <div class="flex flex-col lg:flex-row justify-center items-center w-full">
         <span
-          class="block lg:mb-0 text-gray-200 tracking-normal md:mr-2 font-emphasis text-center"
+          class="block lg:mb-0 text-gray-300 tracking-normal md:mr-2 font-emphasis text-center"
         >
           <time>May 31 - June 2, 2024</time>
         </span>
       </div>
-      <span class="text-gray-300 text-center block font-emphasis">
+      <span class="text-gray-200 text-center block font-emphasis">
         SEATTLE, WA
       </span>
-      <div class="content">
+      <div class="">
         <a
-          class="block antialiased text-base sm:text-lg flex-none z-10 mt-5 hover:scale-105"
+          class="block font-base font-bold antialiased text-base sm:text-lg flex-none z-10 mt-5 hover:scale-105 text-accent-lt"
           href="/festival"
         >
           » More Info
