--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -28,7 +28,7 @@ import { rawContent as info } from '@data/donate_info.md';
         <div class="flex flex-col items-center gap-y-5 my-2">
           <a
             href="https://www.paypal.com/donate/?hosted_button_id=EE2WLALDX9GCA"
-            class="text-shadow flex items-center py-3 px-5 rounded-full transition ease-in-out hover:scale-105 bg-tertiary"
+            class="text-shadow flex items-center py-3 px-5 rounded-full transition ease-in-out hover:scale-105 bg-paypal"
           >
             <i class="paypal mr-2"></i>
             <span class="block text-lg content">Donate with PayPal</span>
