--- a/src/components/home/FestivalInfoBlock.astro
+++ b/src/components/home/FestivalInfoBlock.astro
@@ -4,24 +4,36 @@ import Title from '@components/Title.astro';
 
 <!-- INFO BLOCK -->
 <section class="w-full col-span-6 lg:col-span-2 content-container z-10">
-  <a href="/festival" class="block">
+  <div>
     <Title title="Upcoming Festival" center={true} />
     <div
       class="text-shadow flex flex-col items-center h-full text-xl sm:text-3xl font-medium tracking-wide z-10"
     >
-      <span class="text-accent text-center mb-2 hidden font-emphasis">
-        <span class="text-gray-200">HONK!</span> FEST WEST
-      </span>
-      <div class="flex flex-col lg:flex-row justify-center items-center w-full">
-        <span
-          class="block lg:mb-0 text-gray-300 tracking-normal md:mr-2 font-emphasis text-center"
+      <span class="flex flex-col justify-center items-center h-4 mb-6">
+        <a
+          href="https://www.facebook.com/HONKFestWest/"
+          class="block lg:mb-0 text-accent-lt tracking-normal md:mr-2 font-emphasis text-center text-lg border-b-2 border-accent-lt border-dashed"
         >
-          <time>May 31 - June 2, 2024</time>
-        </span>
-      </div>
-      <span class="text-gray-200 text-center block font-emphasis">
-        SEATTLE, WA
+          » pre-party Thurs May 30th!
+        </a>
       </span>
+      <a href="/festival">
+        <span class="text-accent text-center mb-2 hidden font-emphasis">
+          <span class="text-gray-200">HONK!</span> FEST WEST
+        </span>
+        <div
+          class="flex flex-col lg:flex-row justify-center items-center w-full"
+        >
+          <span
+            class="block lg:mb-0 text-gray-300 tracking-normal md:mr-2 font-emphasis text-center"
+          >
+            <time>May 31 - June 2, 2024</time>
+          </span>
+        </div>
+        <span class="text-gray-200 text-center block font-emphasis">
+          SEATTLE, WA
+        </span>
+      </a>
       <div class="">
         <a
           class="block font-base font-bold antialiased text-base sm:text-lg flex-none z-10 mt-5 hover:scale-105 text-accent-lt"
@@ -31,5 +43,5 @@ import Title from '@components/Title.astro';
         </a>
       </div>
     </div>
-  </a>
+  </div>
 </section>
