chore: Update FestivalInfoBlock component with new pre-party link and date

--- a/src/components/home/FestivalInfoBlock.astro
+++ b/src/components/home/FestivalInfoBlock.astro
@@ -5,18 +5,20 @@ import Title from '@components/Title.astro';
 <!-- INFO BLOCK -->
 <section class="w-full col-span-6 lg:col-span-2 content-container z-10">
   <div>
+    <span class="flex flex-col justify-center items-center h-4 mb-6">
+      <a
+        href="https://www.facebook.com/HONKFestWest/"
+        class="w-full block pb-1 text-accent mb-4 tracking-normal md:mr-2 font-emphasis text-center text-lg border-accent border-dashed"
+      >
+        » pre-party Thurs May 30th!
+      </a>
+    </span>
+  </div>
+  <div>
     <Title title="Upcoming Festival" center={true} />
     <div
       class="text-shadow flex flex-col items-center h-full text-xl sm:text-3xl font-medium tracking-wide z-10"
     >
-      <span class="flex flex-col justify-center items-center h-4 mb-6">
-        <a
-          href="https://www.facebook.com/HONKFestWest/"
-          class="block lg:mb-0 text-accent-lt tracking-normal md:mr-2 font-emphasis text-center text-lg border-b-2 border-accent-lt border-dashed"
-        >
-          » pre-party Thurs May 30th!
-        </a>
-      </span>
       <a href="/festival">
         <span class="text-accent text-center mb-2 hidden font-emphasis">
           <span class="text-gray-200">HONK!</span> FEST WEST
