--- a/src/components/home/FestivalInfoBlock.astro
+++ b/src/components/home/FestivalInfoBlock.astro
@@ -5,10 +5,10 @@ import Title from '@components/Title.astro';
 <!-- INFO BLOCK -->
 <section class="w-full col-span-6 lg:col-span-2 content-container z-10">
   <div>
-    <span class="flex flex-col justify-center items-center h-4 mb-6">
+    <span class="flex flex-col justify-center items-center h-4 mb-4">
       <a
         href="https://www.facebook.com/HONKFestWest/"
-        class="w-full block pb-1 text-accent mb-4 tracking-normal md:mr-2 font-emphasis text-center text-lg border-accent border-dashed"
+        class="w-full block text-accent tracking-normal md:mr-2 font-emphasis text-center text-md border-accent border-dashed"
       >
         » pre-party Thurs May 30th!
       </a>
