update band info

--- a/src/components/home/FestivalInfoBlock.astro
+++ b/src/components/home/FestivalInfoBlock.astro
@@ -1,5 +1,5 @@
 ---
-import Title from '@components/Title.astro';
+import Title from "@components/Title.astro";
 ---
 
 <!-- INFO BLOCK -->
@@ -7,7 +7,7 @@ import Title from '@components/Title.astro';
   <div>
     <span class="flex flex-col justify-center items-center h-4 mb-4">
       <a
-        href="https://www.facebook.com/HONKFestWest/"
+        href="https://facebook.com/events/s/honk-fest-west-thursday-kick-o/975021187663582/"
         class="w-full block text-accent tracking-normal md:mr-2 font-emphasis text-center text-md border-accent border-dashed"
       >
         » pre-party Thurs May 30th!
