better desktop nav buttons

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,8 @@
 ---
-import { Image } from 'astro:assets';
-import SocialLink from '@components/SocialLink.svelte';
-import MobileMenu from '@components/MobileMenu.svelte';
-import type { Nav, Social } from 'src/env';
+import { Image } from "astro:assets";
+import SocialLink from "@components/SocialLink.svelte";
+import MobileMenu from "@components/MobileMenu.svelte";
+import type { Nav, Social } from "src/env";
 
 interface Props {
   nav: Nav;
@@ -16,8 +16,8 @@ const currentMenuItem = nav.links.find((item) =>
 
 const activeListItem = (link: string) => {
   return currentMenuItem?.link === link
-    ? 'text-shadow  cursor-default rounded-full shadow-lg bg-accent ring-accent ring-4'
-    : 'text-shadow hover:scale-105 focus:scale-100 hover:focus:scale-90 group-hover:group-focus-within:scale-100 rounded-full shadow-lg bg-tertiary-dk ring-tertiary ring-4';
+    ? "text-shadow  cursor-default rounded-full shadow-lg bg-accent ring-accent ring-4"
+    : "text-shadow hover:scale-105 focus:scale-100 hover:focus-within:bg-accent hover:focus-within:ring-0 group-hover:group-focus-within:scale-100 rounded-full shadow-lg bg-tertiary-dk ring-tertiary ring-4";
 };
 ---
 
