--- a/src/components/home/FestivalInfoBlock.astro
+++ b/src/components/home/FestivalInfoBlock.astro
@@ -4,7 +4,7 @@ import Title from "@components/Title.astro";
 
 <!-- INFO BLOCK -->
 <section class="w-full col-span-6 lg:col-span-2 content-container z-10">
-  <div>
+  <!-- <div>
     <span class="flex flex-col justify-center items-center h-4 mb-4">
       <a
         href="https://facebook.com/events/s/honk-fest-west-thursday-kick-o/975021187663582/"
@@ -14,7 +14,7 @@ import Title from "@components/Title.astro";
       </a>
     </span>
   </div>
-  <div>
+  <div> -->
     <Title title="Upcoming Festival" center={true} />
     <div
       class="text-shadow flex flex-col items-center h-full text-xl sm:text-3xl font-medium tracking-wide z-10"
@@ -29,21 +29,21 @@ import Title from "@components/Title.astro";
           <span
             class="block lg:mb-0 text-gray-300 tracking-normal md:mr-2 font-emphasis text-center"
           >
-            <time>May 31 - June 2, 2024</time>
+            <time>May 30 - June 1, 2025</time>
           </span>
         </div>
         <span class="text-gray-200 text-center block font-emphasis">
           SEATTLE, WA
         </span>
       </a>
-      <div class="">
+      <!-- <div class="">
         <a
           class="block font-base font-bold antialiased text-base sm:text-lg flex-none z-10 mt-5 hover:scale-105 text-accent-lt"
           href="/festival"
         >
           » More Info
         </a>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
