update style: brighter

--- a/src/components/pages/index/LinkBlurb.astro
+++ b/src/components/pages/index/LinkBlurb.astro
@@ -17,7 +17,7 @@ const { title = '', href = '#' } = Astro.props;
   </p>
   <div>
     <a
-      class="block underline underline-offset-2 antialiased sm:text-lg text-link font-bold flex-none mt-3 z-10 relative hover:scale-105 hover:left-2"
+      class="block antialiased sm:text-lg text-link font-semibold font-base flex-none mt-3 z-10 relative hover:scale-105 hover:left-2"
       href={href}
     >
       » Read More
