--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ import artworkImg from '@assets/images/2025/hfw-2025-artwork.png';
     <section class="col-span-6 md:col-span-2 content-container">
       <LinkBlurb title="Volunteer" href="/volunteer">
         If you want to volunteer, and help make HONK! Fest West magic, please
-        <a class="font-bold inline-block hover:scale-105" href="/volunteer">
+        <a class="font-medium inline-block hover:scale-105" href="/volunteer">
           APPLY HERE</a
         >
         and Thank You!!
@@ -88,7 +88,7 @@ import artworkImg from '@assets/images/2025/hfw-2025-artwork.png';
       </p>
       <br />
       <a
-        class="text-shadow block ease-in font-base link text-link font-bold text-base sm:text-lg relative hover:scale-105 hover:left-6"
+        class="text-shadow block ease-in font-base link text-link font-medium text-base sm:text-lg relative hover:scale-105 hover:left-6"
         href="https://www.duwamishtribe.org/donate"
       >
         » Please support the Duwamish Tribe
