--- a/src/components/pages/index/NewsletterForm.astro
+++ b/src/components/pages/index/NewsletterForm.astro
@@ -56,7 +56,7 @@ import Title from '@components/Title.astro';
         value="Subscribe"
         name="subscribe"
         id="mc-embedded-subscribe"
-        class="md:mt-4 text-shadow z-20 text-gray-200 bg-button hover:bg-opacity-90 rounded font-base text-base sm:text-lg px-2 py-1 cursor-pointer hover:scale-105 ease-in"
+        class="md:mt-4 text-shadow z-20 text-button-text bg-button-background hover:bg-opacity-90 rounded font-base text-base sm:text-lg px-2 py-1 cursor-pointer hover:scale-105 ease-in"
       />
     </div>
   </form>
