--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ const fullTitle = title ? `${title} - HONK! Fest West` : "HONK! Fest West";
       </header>
 
       <!-- MAIN -->
-      <main class="flex-auto bg-main-background pt-10">
+      <main class="flex-auto bg-main-background pt-10 border-t-1 border-content-border">
         <div class="max-w-screen-xl mx-auto w-full px-6">
           <slot />
         </div>
