--- a/src/components/pages/index/HonkAllstars.astro
+++ b/src/components/pages/index/HonkAllstars.astro
@@ -9,6 +9,7 @@ import allstarsTile from '@assets/images/allstars-jamnight.png';
     <div class="flex flex-col items-center">
       <a
         href="/allstars"
+        aria-label="HONK! All Stars: Jam Night"
         class="w-full h-full block min-h-80 bg-contain bg-repeat-x bg-center"
         style=`background-image: url("${allstarsTile.src}");`
       >
