--- a/src/components/pages/volunteer/FestivalVolunteer.astro
+++ b/src/components/pages/volunteer/FestivalVolunteer.astro
@@ -10,7 +10,7 @@ import Title from '@components/Title.astro';
   </p>
   <a
     href="https://pointapp.org/orgs/3346"
-    class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-tertiary w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
+    class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-gold-900 w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
   >
     » SIGN UP HERE
   </a>
