--- a/src/components/pages/volunteer/OpenPositions.astro
+++ b/src/components/pages/volunteer/OpenPositions.astro
@@ -15,7 +15,7 @@ const openPositions = await getCollection('openPositions');
       <p>{position.data.description}</p>
       <a
         href={`/volunteer/committee-form?position=${position.data.title}`}
-        class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-tertiary w-fit text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
+        class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-gold-900 w-fit text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
       >
         » APPLY
       </a>
