--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import "@styles/tailwind.css";
+import "@styles/global.css";
 import HeadOpenGraph from "@components/head/OpenGraph.astro";
 import Header from "@components/Header.astro";
 
@@ -31,7 +31,7 @@ const fullTitle = title ? `${title} - HONK! Fest West` : "HONK! Fest West";
 
       <!-- MAIN -->
       <main class="flex-auto bg-main-background pt-10 border-t-1 border-content-border">
-        <div class="max-w-screen-xl mx-auto w-full px-6">
+        <div class="max-w-screen-xl mx-auto w-full px-6 lg:py-8">
           <slot />
         </div>
       </main>
