--- a/src/pages/volunteer/committee-form.astro
+++ b/src/pages/volunteer/committee-form.astro
@@ -89,7 +89,7 @@ import Layout from '@layouts/Layout.astro';
         <div>
           <button
             type="submit"
-            class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-tertiary w-fit text-lg bg-opacity-80 px-3 py-2 hover:bg-opacity-90"
+            class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-gold-900 w-fit text-lg bg-opacity-80 px-3 py-2 hover:bg-opacity-90"
             >Submit</button
           >
         </div>
