--- a/src/pages/volunteer/index.astro
+++ b/src/pages/volunteer/index.astro
@@ -8,8 +8,8 @@ import FestivalVolunteer from '@components/pages/volunteer/FestivalVolunteer.ast
 ---
 
 <Layout title="Volunteer">
-  <div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
-    <div class="w-full md:w-1/3 grid grid-cols-1 gap-6 h-fit">
+  <div class="flex flex-wrap md:flex-nowrap layout-gap">
+    <div class="w-full md:w-1/3 grid grid-cols-1 layout-gap h-fit">
       <FestivalVolunteer />
       <div class="content-container">
         <Title title="Provide Housing" center={true} />
@@ -18,13 +18,13 @@ import FestivalVolunteer from '@components/pages/volunteer/FestivalVolunteer.ast
         </p>
         <a
           href="/volunteer/housing-form"
-          class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-tertiary w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
+          class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-gold-900 w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
         >
           » SIGN UP HERE
         </a>
       </div>
     </div>
-    <div class="w-full md:w-2/3 flex flex-col gap-4 sm:gap-6">
+    <div class="w-full md:w-2/3 flex flex-col layout-gap">
       <div class="content-container">
         <BackToTop />
         <Title title="HONK! Fest West" subtitle="NEEDS YOU!!!" />
