--- a/src/pages/supporters/index.astro
+++ b/src/pages/supporters/index.astro
@@ -6,9 +6,10 @@ import Title from '@components/Title.astro';
 import BackToTop from '@components/BackToTop.astro';
 import { getCollection } from 'astro:content';
 
-const artSupporters = await getCollection('artSupporters');
-const grantSupporters = await getCollection('grantSupporters');
-const shoutoutSupporters = await getCollection('shoutoutSupporters');
+const supporters = await getCollection('supporters');
+const artSupporters = supporters.filter((s) => s.data.type === 'art');
+const grantSupporters = supporters.filter((s) => s.data.type === 'grant');
+const shoutoutSupporters = supporters.filter((s) => s.data.type === 'shoutout'); 
 
 ---
 
