--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import "@styles/global.css";
-import HeadOpenGraph from "@components/head/OpenGraph.astro";
+import HeadOpenGraph from "./head/OpenGraph.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 
