--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -4,12 +4,12 @@ import { Image } from 'astro:assets';
 import Layout from '@layouts/Layout.astro';
 import Title from '@components/Title.astro';
 import BackToTop from '@components/BackToTop.astro';
-import CommitteePhotos from '@components/pages/about/CommitteePhotos.astro';
-import CommitteeRoles from '@components/pages/about/CommitteeRoles.astro';
-import HonkFamily from '@components/pages/about/HonkFamily.astro';
-import ContactUs from '@components/pages/about/ContactUs.astro';
-import NavButton from '@components/pages/about/NavButton.astro';
 import MarkdownContent from '@components/MarkdownContent.astro';
+import CommitteePhotos from './_CommitteePhotos.astro';
+import CommitteeRoles from './_CommitteeRoles.astro';
+import HonkFamily from './_HonkFamily.astro';
+import ContactUs from './_ContactUs.astro';
+import NavButton from './_NavButton.astro';
 import { rawContent as diversity_content } from '@data/diversity.md';
 import { rawContent as join_us_content } from '@data/join_us.md';
 import { rawContent as mission_content } from '@data/mission.md';
