--- a/src/pages/festival/index.astro
+++ b/src/pages/festival/index.astro
@@ -1,5 +1,5 @@
 ---
-import HeadOpenGraph from '@components/head/OpenGraph.astro';
+import HeadOpenGraph from '@layouts/head/OpenGraph.astro';
 
 
 // import logoImg from '/src/assets/images/logos/2023-logo-white.png';
