--- a/src/pages/home/_Slideshow.astro
+++ b/src/pages/home/_Slideshow.astro
@@ -1,7 +1,7 @@
 ---
 // Carousel.astro
 import type { ImageMetadata } from 'astro';
-import Slide from './Slide.astro';
+import Slide from './_Slide.astro';
 // Props for customization
 export interface Props {
     images?: ImageMetadata[]; // Array of image URLs
