--- a/src/pages/home/_posts/GivingTuesday.astro
+++ b/src/pages/home/_posts/GivingTuesday.astro
@@ -10,9 +10,9 @@ import Title from "@components/Title.astro";
     height="500"
     src="https://www.wagives.org/forms/honk-fest-west?id=ajcqcf&embed=donation_widget"
     scrolling="no"
-    marginHeight="0"
-    marginWidth="0"
-    frameBorder="0"></iframe>
+    marginheight="0"
+    marginwidth="0"
+    frameborder="0"></iframe>
 </div>
 <div class="z-10">
   <Title title="#GivingTuesday" subtitle="2023" />
