--- a/src/pages/media/index.astro
+++ b/src/pages/media/index.astro
@@ -2,7 +2,7 @@
 import Layout from '@layouts/Layout.astro';
 import Title from '@components/Title.astro';
 import BackToTop from '@components/BackToTop.astro';
-import PhotosVideo from '@components/pages/media/PhotosVideo.astro';
+import PhotosVideo from './_PhotosVideo.astro';
 import MarkdownContent from '@components/MarkdownContent.astro';
 import { rawContent as articles } from '@data/articles.md';
 
