--- a/src/pages/portal/index.astro
+++ b/src/pages/portal/index.astro
@@ -1,5 +1,5 @@
 ---
-import FestivalCountDown from "@components/pages/portal/FestivalCountDown.svelte";
+import FestivalCountDown from "./_FestivalCountDown.svelte";
 import "@styles/global.css";
 ---
 
