--- a/src/pages/volunteer/index.astro
+++ b/src/pages/volunteer/index.astro
@@ -2,8 +2,8 @@
 import Layout from '@layouts/Layout.astro';
 import Title from '@components/Title.astro';
 import BackToTop from '@components/BackToTop.astro';
-import OpenPositions from '@components/pages/volunteer/OpenPositions.astro';
-import FestivalVolunteer from '@components/pages/volunteer/FestivalVolunteer.astro';
+import OpenPositions from './_OpenPositions.astro';
+import FestivalVolunteer from './_FestivalVolunteer.astro';
 
 ---
 
